# TMC4671-LEV-REF

./: .cproject  .project  BLDC.c  BLDC.h  Button.c  Button.h  CMakeLists.txt  Definitions.h  Led.c  Led.h  LedRear.c  LedRear.h  Makefile  README.md  Sensor.c  Sensor.h  TMCL.c  TMCL.h  main.c
ROM_RUN/: BLDC.lst  Button.lst  CAN.lst  Cpu.lst  Debug.lst  Eeprom.lst  Flags.lst  Functions.lst  IO.lst  LIS2DH12.lst  Led.lst  LedRear.lst  LinearRamp.lst  SPI.lst  Sensor.lst  SystemInfo.lst  Systick.lst  TMC4671-LEV-REF_v1.0.lst  TMC4671.lst  TMC4671_LEV_REF.elf  TMC4671_LEV_REF.lss  TMC4671_LEV_REF.map  TMC4671_LEV_REF.sym  TMC6200.lst  TMCL.lst  UART.lst  cortexm3_macro.lst  main.lst  stm32f10x_adc.lst  stm32f10x_bkp.lst  stm32f10x_can.lst  stm32f10x_dma.lst  stm32f10x_exti.lst  stm32f10x_flash.lst  stm32f10x_gpio.lst  stm32f10x_i2c.lst  stm32f10x_it.lst  stm32f10x_nvic.lst  stm32f10x_pwr.lst  stm32f10x_rcc.lst  (+5 more)
ROM_RUN/dep/: BLDC.o.d  Button.o.d  CAN.o.d  Cpu.o.d  Debug.o.d  Eeprom.o.d  Flags.o.d  Functions.o.d  IO.o.d  LIS2DH12.o.d  Led.o.d  LedRear.o.d  LinearRamp.o.d  SPI.o.d  Sensor.o.d  SystemInfo.o.d  Systick.o.d  TMC4671-LEV-REF_v1.0.o.d  TMC4671.o.d  TMC6200.o.d  TMCL.o.d  UART.o.d  main.o.d  stm32f10x_adc.o.d  stm32f10x_bkp.o.d  stm32f10x_can.o.d  stm32f10x_dma.o.d  stm32f10x_exti.o.d  stm32f10x_flash.o.d  stm32f10x_gpio.o.d  stm32f10x_i2c.o.d  stm32f10x_it.o.d  stm32f10x_nvic.o.d  stm32f10x_pwr.o.d  stm32f10x_rcc.o.d  stm32f10x_spi.o.d  stm32f10x_systick.o.d  stm32f10x_tim.o.d  stm32f10x_usart.o.d  stm32f10x_vector.o.d
cpu/STM32F103/: STM32_SEC_FLASH.ld  STM32_SEC_FLASH_1.ld  stm32-tmcm.ld  stm32.ld  stm32f10x_conf.h  stm32f10x_conf_adapted.h  stm32f10x_it.c  stm32f10x_it_adapted.c  stm32f10x_it_adapted.h  stm32f10x_pwr.c  stm32f10x_type.h  usb_type.h
hal/: Debug.c  Debug.h  Flags.c  Flags.h  Hal_Definitions.h
hal/FT4222H/: FT4222H.cpp  FT4222H.h  FT4222HCommandHandler.cpp  FT4222HCommandHandler.h  FT4222HDataThread.cpp  FT4222HDataThread.h  LibFT4222.h  WeaselDebugInterfaceDefines.h  WinTypes.h  ftd2xx.h
hal/comm/: CAN.c  CAN.h  Eeprom.c  Eeprom.h  SPI.c  SPI.h  UART.c  UART.h
hal/ic/: LIS2DH12.c  LIS2DH12.h
hal/modules/: SelectModule.h  TMC4671-LEV-REF_v1.0.c  TMC4671-LEV-REF_v1.0.h
hal/system/: Cpu.c  Cpu.h  IO.c  IO.h  SysTick.c  SysTick.h  SystemInfo.c  SystemInfo.h
hal/tmcl/: TMCL-Defines.h
